# HW_2module

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt  test_log.txt  transaction.py  widget.py
src/: decorators.py  generators.py  masks.py  processing.py  service.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
