[tool.poetry]
name = "hw-2module"
version = "0.1.0"
description = ""
authors = ["KaterinaPavlova777 <miss.kat.katerina2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
stubs = "^1.0.0"
types-requests = "^2.32.0.20240523"
pandas = "^2.2.2"
mypy = "^1.10.0"
aiogram = "^3.8.0"
black = "^24.4.2"
pandas-stubs = "^2.2.2.240603"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
line_length = 119